# ugv_ws

./: .clang-format  .clang-tidy  .gitignore  README.md  build_apriltag.sh  build_common.sh  build_cv.sh  build_extra.sh  build_first.sh  build_main.sh  fan_ctrl.py  pub.py  ros2_humble.sh  save_2d_cartographer_map.sh  save_2d_cartographer_map_gazebo.sh  save_2d_gmapping_map.sh  save_2d_gmapping_map_gazebo.sh  setup_clangd.sh
data/: map_points.txt
install/: local_setup.sh  setup.sh
install/ugv_bringup/share/ugv_bringup/: package.xml
install/ugv_chat_ai/share/ugv_chat_ai/: package.xml
log/: latest_build
python/: simple_control.py
scripts/: requirements.txt
src/ugv_else/apriltag_ros/apriltag/: CMakeLists.txt
src/ugv_else/apriltag_ros/apriltag_msgs/: CMakeLists.txt
src/ugv_else/apriltag_ros/apriltag_ros/: CMakeLists.txt
src/ugv_else/cartographer/: CMakeLists.txt  package.xml
src/ugv_else/cartographer/config/: localization_2d.lua  mapping_2d.lua
src/ugv_else/cartographer/launch/: localization.launch.py  mapping.launch.py
src/ugv_else/costmap_converter/costmap_converter/: CMakeLists.txt
src/ugv_else/emcl2_ros2/: CMakeLists.txt
src/ugv_else/emcl2_ros2/src/: ExpResetMcl2.cpp  Mcl.cpp
src/ugv_else/explore_lite/: CMakeLists.txt
src/ugv_else/ldlidar/: CMakeLists.txt  package.xml
src/ugv_else/rf2o_laser_odometry/: CMakeLists.txt
src/ugv_else/robot_pose_publisher/: CMakeLists.txt  package.xml
src/ugv_main/ugv_base_node/: CMakeLists.txt  package.xml
src/ugv_main/ugv_bringup/: package.xml  setup.cfg  setup.py
src/ugv_main/ugv_chat_ai/: package.xml  setup.cfg  setup.py
src/ugv_main/ugv_description/: CMakeLists.txt  package.xml
src/ugv_main/ugv_description/launch/: display.launch.py
src/ugv_main/ugv_description/meshes/rasp_rover/: base_lidar_link.stl  base_link.stl  left_down_wheel_link.stl  left_up_wheel_link.stl  pt_base_link.stl  pt_camera_link.stl  pt_link1.stl  pt_link2.stl  right_down_wheel_link.stl  right_up_wheel_link.stl
src/ugv_main/ugv_description/meshes/ugv_beast/: 3d_camera_link.stl  base_lidar_link.stl  base_link.stl  left_down_wheel_link.stl  left_up_wheel_link.stl  pt_base_link.stl  pt_camera_link.stl  pt_link1.stl  pt_link2.stl  right_down_wheel_link.stl  right_up_wheel_link.stl
src/ugv_main/ugv_description/meshes/ugv_rover/: 3d_camera_link.stl  base_lidar_link.stl  base_link.stl  left_down_wheel_link.stl  pt_base_link.stl  pt_camera_link.stl  pt_link1.stl  pt_link2.stl  right_down_wheel_link.stl
src/ugv_main/ugv_description/rviz/: view_description.rviz
src/ugv_main/ugv_description/urdf/: rasp_rover.urdf  ugv_beast.urdf  ugv_rover.urdf
src/ugv_main/ugv_gazebo/: CMakeLists.txt  package.xml
src/ugv_main/ugv_gazebo/launch/: display.launch.py
src/ugv_main/ugv_gazebo/launch/bringup/: bringup.launch.py  bringup_test.launch.py  robot_state_publisher.launch.py  spawn_ugv.launch.py
src/ugv_main/ugv_gazebo/launch/nav/: nav.launch.py  nav_rtabmap.launch.py  rtabmap_localization_launch.py
src/ugv_main/ugv_gazebo/launch/nav_bringup/: bringup_launch_cartographer.launch.py  nav2_bringup.launch.py  navigation_launch.py
src/ugv_main/ugv_gazebo/launch/slam/: cartographer.launch.py  gmapping.launch.py  rtabmap_rgbd.launch.py
src/ugv_main/ugv_gazebo/launch/slam_nav/: slam_nav.launch.py
src/ugv_main/ugv_gazebo/maps/: map.pgm  map.yaml
src/ugv_main/ugv_gazebo/models/rasp_rover/: model.config  model.sdf
src/ugv_main/ugv_gazebo/models/ugv_beast/: model.config  model.sdf
src/ugv_main/ugv_gazebo/models/ugv_rover/: model.config  model.sdf
src/ugv_main/ugv_gazebo/models/world/: model.sdf
src/ugv_main/ugv_gazebo/param/: amcl_dwa.yaml  amcl_teb.yaml  emcl_dwa.yaml  emcl_teb.yaml  rtabmap_dwa.yaml  rtabmap_teb.yaml  slam_nav.yaml
src/ugv_main/ugv_gazebo/rviz/: display.rviz  view_nav_2d.rviz  view_nav_3d.rviz  view_slam_2d.rviz  view_slam_3d.rviz
src/ugv_main/ugv_gazebo/urdf/: rasp_rover.urdf  ugv_beast.urdf  ugv_rover.urdf
src/ugv_main/ugv_gazebo/worlds/: ugv_world.world
src/ugv_main/ugv_interface/: CMakeLists.txt  package.xml
src/ugv_main/ugv_interface/action/: Behavior.action
src/ugv_main/ugv_interface/srv/: MapSave.srv
src/ugv_main/ugv_nav/: CMakeLists.txt  package.xml
src/ugv_main/ugv_slam/: CMakeLists.txt  package.xml
src/ugv_main/ugv_tools/: package.xml  setup.cfg  setup.py
src/ugv_main/ugv_vision/: package.xml  setup.cfg  setup.py
src/ugv_main/ugv_web_app/: package.xml  setup.cfg  setup.py
(+119 files in other folders)
