<package format="2">
  <name>ugv_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for UGV</p>
    <p>This package contains configuration data, 3D models and launch files
for UGV robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>joint_state_publisher_gui</depend>
  <export>
    <architecture_independent />
    <build_type>ament_cmake</build_type>
  </export>
</package>
